--- a/client/netstreams-controlcenter/src/App.css
+++ b/client/netstreams-controlcenter/src/App.css
@@ -26,10 +26,6 @@
   }
 }
 
-
-
-
-
 .sidebar {
   position: fixed;
   top: 0;
@@ -40,8 +36,9 @@
   padding: 48px 0 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
+
 #sidebar-wrapper{
-  min-height: 100vh !important;
+
   width: 100vw;
   margin-left: -1rem;
   -webkit-transition: margin .25s ease-out;
@@ -57,4 +54,6 @@
 #page-content-wrapper {
   min-width: 0;
   width: 100%;
+  margin-top: 50px;
+  margin-left:200px;
 }
